--- a/style.css
+++ b/style.css
@@ -30,10 +30,16 @@
 }
 
 .presentacion{
-    
     background-color: rgba(188, 143, 143, 0.404);
-    
 }
+
+.presentacion h1{
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 60px;
+}
+
+
 
 .ramoPrincipal {
     background-image: linear-gradient(rgba(5, 7, 12, 0.26),rgba(5, 7, 12, 0.144)), url(https://www.publicdomainpictures.net/pictures/20000/velka/pink-hearts.jpg);
