--- a/style.css
+++ b/style.css
@@ -100,45 +100,70 @@
     background-color: rgba(233, 150, 122, 0.274);
 }
 
-.form-container {
-    background-color: #f5f5f5;
+
+.formulario {
+    background-color: rgba(188, 143, 143, 0.678);
+    color: white;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.form-control {
-    margin-bottom: 10px;
-}
-.btn-primary {
-    background-color: #007bff;
-    border: none;
-}
-.btn-primary:hover {
-    background-color: #0056b3;
-}
-.form-label {
-    font-weight: bold;
-}
-.form-label h2 {
-    color: #333;
-    font-size: 24px;
-}
-.btn-container {
+.formulario h2 {
+    font-family: 'Courier New', Courier, monospace;
     text-align: center;
 }
 
+.form-group {
+    margin-bottom: 15px;
+}
 
-.contacto1{
-    background-image: linear-gradient(rgba(5, 7, 12, 0.171),rgba(5, 7, 12, 0.144)),url(https://luamarthin.com/wp-content/uploads/2020/12/tela-algodon-corazones.jpg);
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+button {
+    background-color: rgb(180, 102, 216);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgba(240, 128, 128, 0.541);
+}
+
+.boton-reset a{
+    text-decoration: none;
     color: white;
-    font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
+}
+
+.form_contacto {
+    padding-top: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    background-image: linear-gradient(rgba(5, 7, 12, 0.171),rgba(5, 7, 12, 0.144)),url(https://luamarthin.com/wp-content/uploads/2020/12/tela-algodon-corazones.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
 .sub-catalogo h2{
     font-family: 'Courier New', Courier, monospace;
 }
@@ -167,7 +192,16 @@
     margin-bottom: 20px;
 }
 
-.pie a{
+.pie{
+    background-color: rgba(102, 51, 153, 0.747);
+    color: white;
+}
+.pie a[href^="mailto"] {
+    color: white;
+    text-decoration: none;
+}
+.pie a[href^="tel"] {
+    color: white;
     text-decoration: none;
 }
 
